REOPENED169014
[MediaStream] UIClient may not be notified of capture state change when leaving a page
https://bugs.webkit.org/show_bug.cgi?id=169014
Summary [MediaStream] UIClient may not be notified of capture state change when leavi...
Eric Carlson
Reported 2017-02-28 18:25:18 PST
The UA may not be notified of the capture state change when leaving a page
Attachments
Proposed patch. (7.01 KB, patch)
2017-02-28 18:34 PST, Eric Carlson
no flags
Eric Carlson
Comment 1 2017-02-28 18:25:45 PST
Eric Carlson
Comment 2 2017-02-28 18:34:44 PST
Created attachment 303024 [details] Proposed patch.
youenn fablet
Comment 3 2017-02-28 19:50:28 PST
Comment on attachment 303024 [details] Proposed patch. Was it also causing microphone/capture sandbox to not be revoked? If so, can we add some sort of test or additional checks for it? What about session-like gum granting?
WebKit Commit Bot
Comment 4 2017-03-02 07:49:06 PST
Comment on attachment 303024 [details] Proposed patch. Clearing flags on attachment: 303024 Committed r213281: <http://trac.webkit.org/changeset/213281>
WebKit Commit Bot
Comment 5 2017-03-02 07:49:12 PST
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 6 2017-03-02 10:02:39 PST
This change caused API test WebKit2.UserMediaBasic to time out: https://build.webkit.org/builders/Apple%20Sierra%20Release%20WK2%20%28Tests%29/builds/4018
Ryan Haddad
Comment 7 2017-03-02 10:18:39 PST
Reverted r213281 for reason: This change caused API test WebKit2.UserMediaBasic to time out. Committed r213287: <http://trac.webkit.org/changeset/213287>
Note You need to log in before you can comment on or make changes to this bug.