[MediaStream] UIClient may not be notified of capture state change when leaving a page https://bugs.webkit.org/show_bug.cgi?id=169014 <rdar://problem/30632267>

Reviewed by Youenn Fablet.

Enable and update the WebKit API test WebKit2.UserMedia.

* dom/Document.cpp:
(WebCore::Document::prepareForDestruction): Always call page.updateIsPlayingMedia() if there
is active media in the document because it won't be possible when the state changes later
because the frame will have been cleared.


Canonical link: https://commits.webkit.org/186076@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213281 268f45cc-cd09-0410-ab3c-d52691b4dbfc